--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.4'
 
 services:
   one-api:
-    image: "${REGISTRY:-docker.io}/justsong/one-api:latest"
+    #image: "${REGISTRY:-docker.io}/justsong/one-api:latest"
+    image: registry.si.icu/sijinhui/one-api
     container_name: one-api
     restart: always
     command: --log-dir /app/logs
